// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrainersList> should render 1`] = `
<TrainersList__StyledTrainersContainer>
  <Text
    margin="0 0 0.5em 0"
    type="primary"
  >
    Trenerzy
  </Text>
  <TrainersList__StyledTrainersList>
    <Trainer
      important={true}
      trainer={
        UserModel {
          "email": undefined,
          "name": undefined,
          "nickname": undefined,
          "picture": undefined,
        }
      }
    />
  </TrainersList__StyledTrainersList>
  <Connect(BecomeTrainerContainer) />
</TrainersList__StyledTrainersContainer>
`;

exports[`<TrainersList> when trainers are provided should match snapshot 1`] = `
<TrainersList__StyledTrainersContainer>
  <Text
    margin="0 0 0.5em 0"
    type="primary"
  >
    Trenerzy
  </Text>
  <TrainersList__StyledTrainersList>
    <Trainer
      important={true}
      trainer={
        UserModel {
          "email": undefined,
          "name": undefined,
          "nickname": undefined,
          "picture": undefined,
        }
      }
    />
    <Trainer
      key="0"
      trainer={
        UserModel {
          "email": undefined,
          "name": undefined,
          "nickname": undefined,
          "picture": undefined,
        }
      }
    />
    <Trainer
      key="1"
      trainer={
        UserModel {
          "email": undefined,
          "name": undefined,
          "nickname": undefined,
          "picture": undefined,
        }
      }
    />
  </TrainersList__StyledTrainersList>
  <Connect(BecomeTrainerContainer) />
</TrainersList__StyledTrainersContainer>
`;
